--- a/src/main/resources/templates/dash.html
+++ b/src/main/resources/templates/dash.html
@@ -62,6 +62,19 @@
                     <div class="card-icon">⚙️</div>
                     <div class="card-title">Settings</div>
                 </div>
+                <a th:if="${user.getRole() == 'ADMIN'}" th:href="@{/viewInvoices}">
+                    <div class="card">
+                        <div class="card-icon"></div>
+                        <div class="card-title">View Invoices</div>
+                    </div>
+                </a>
+                <a th:if="${user.getRole() == 'ADMIN'}" th:href="@{/createInvoices}">
+                    <div class="card">
+                        <div class="card-icon"></div>
+                        <div class="card-title">Create Invoices</div>
+                    </div>
+                </a>
+
             </div>
         </div>
     </div>
