--- a/src/main/resources/templates/aboutus.html
+++ b/src/main/resources/templates/aboutus.html
@@ -8,7 +8,7 @@
    
 </head>
 <body>
-    <div th:replace= "~{/layout :: header}"></div>
+    <div th:replace= "~{layout :: header}"></div>
     <div class="topbar">
         <h1>About Lifeline Clinic</h1>
     </div>
@@ -59,7 +59,7 @@
         </div>
     </div>
 
-    <div th:replace= "~{/layout :: footer}"></div>
+    <div th:replace= "~{layout :: footer}"></div>
 
 </body>
 </html>
