--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -7,7 +7,7 @@
      <link rel="stylesheet" href="styles.css"> 
 </head>
 <body>  
-    <div th:replace= "~{layout :: header}"></div>  
+    <div th:replace= "~{/layout :: header}"></div>  
 <div class="page">
         <div class="signupbox">
         <!-- Display flash attributes -->
